# account-backend

./: Dockerfile  README.md  main.py  noxfile.py  pyproject.toml  requirements.txt  sample.env
.github/workflows/: acr_docker_build.yml  acr_docker_build_reauth.yml  docker-hub-build-push.yml  nox.yml  test.yml
account/: __init_.py  app.py  auth.py  config.py  jwt.py  main.py  models.py
account/api/: auth.py  root.py  user_manager.py
account/models/: __init__.py  addon.py  auth.py  helpers.py  plan.py  token.py  user.py  usersdb.py  util.py
account/routers/: auth.py  plan.py  user.py
account/routes/: __init__.py  addon.py  auth.py  mail.py  notification.py  plan.py  register.py  stripe.py  token.py  user.py
account/routes/admin/: __init__.py  stripe.py  token.py  user.py
account/util/: __init__.py  current_user.py  fa_users_compat.py  mail.py  mailing.py  password.py  recaptcha.py  stripe.py  token.py  user_manager.py
account/views/: __init__.py  auth.py  plan.py  user.py
tests/: __init__.py  conftest.py  data.py  requirements.txt  setup.py  util.py
tests/data/: plans.json
tests/views/: __init__.py  test_auth.py  test_notification.py  test_plan.py  test_register.py  test_token.py  test_user.py
util/: add_token.py  add_usage.py  change_plan.py  email_reset.py  gen_salt.py  loader.py  validate_email.py
