[project]
name = "account"
version = "0.1.0"
description = "AVWX account management backend service"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Michael duPont", email="michael@dupont.dev"}
]
dependencies = [
    "bcrypt==4.1.2",
    "beanie==1.25.0",
    "fastapi==0.110.0",
    "fastapi-jwt==0.2.0",
    "fastapi-mail==1.4.1",
    "httpx==0.27.0",
    "kewkew==0.1",
    "mailchimp3==3.0.21",
    "python-decouple==3.8",
    "rollbar==1.0.0",
    "stripe==8.8.0",
    "uvicorn==0.29.0",
]

[project.optional-dependencies]
dev = ["mypy", "ruff"]
test = [
    "asgi-lifespan~=2.1",
    "pytest-asyncio~=0.23",
]

[project.urls]
"Source" = "https://github.com/avwx-rest/account-backend"

[tool.mypy]
check_untyped_defs = true
disallow_any_unimported = false
disallow_untyped_defs = true
explicit_package_bases = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
lint.extend-select = [
    "UP",
    "D",
]
lint.ignore = [
    "D105",
    "D203",
    "D213",
]